--- a/.env.sample
+++ b/.env.sample
@@ -1,5 +1,10 @@
-VITE_APPWRITE_PROJECT_ID = 
-VITE_APPWRITE_URL = 
-VITE_APPWRITE_DATABASE_ID = 
-VITE_APPWRITE_COLLECTION_ID = 
-VITE_APPWRITE_BUCKET_ID = 
+VITE_APPWRITE_STORAGE_ID=
+VITE_APPWRITE_POSTS_COLLECTION_ID=
+VITE_APPWRITE_SAVES_COLLECTION_ID=
+VITE_APPWRITE_USERS_COLLECTION_ID=
+VITE_APPWRITE_DATABASE_ID=
+VITE_APPWRITE_URL=
+VITE_APPWRITE_PROJECT_ID=
+
+
+
